[Fixed Radio alignment issue on Cart page #120021]

--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_cart.less
@@ -97,6 +97,7 @@
                 .field {
                     .radio {
                         float: left;
+                        margin-top: 4px;
                     }
 
                     .radio {
